# whisper-acft-pipeline

./: .gitignore  .gitmodules  README.md  pyproject.toml
ai_specs/: datasets.md  distillation-experiment-log.md  distillation-research.md  fix-acft-to-match-futo-reference.md  glossary.md  improve-hebrew-models.md  improve-hebrew-tiny-model.md  whisper-finetune-script.md
configs/: hebrew_base_distill.yaml  hebrew_base_ft.md  hebrew_base_ft.yaml  hebrew_small_acft.yaml  hebrew_small_acft_eeizenman.yaml  hebrew_small_acft_mike_v4.yaml  hebrew_small_finetune.yaml  hebrew_small_ft_v2.yaml  hebrew_tiny_acft.yaml  hebrew_tiny_distill.yaml  hebrew_tiny_finetune.yaml  hebrew_tiny_ft_v2.md  hebrew_tiny_ft_v2.yaml
scripts/: acft_train.py  bootstrap.sh  distill.py  eval.py  finetune.py  pipeline.py  precompute_teacher.py  sweep_distill.py
