[project]
name = "whisper-acft-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets==3.6.0",
    "evaluate>=0.4.6",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "numpy>=2.4.2",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
